--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "index-docs": "node ./.next/serverless/scripts/index-docs.js"
   },
